run.bat errors fixed (--illegal-access=permit --add-opens javafx.graphics/com.sun.javafx.scene=com.jfoenix)